Fixed spacing issues, changed inputs with lower opacity

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,10 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 
+p {
+	-webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+}
 
 .parent {
   position: relative;
@@ -25,6 +29,13 @@ body {
 
 #main a {
 	color: #600473;
+}
+#main a:hover p {
+	opacity: 0.7;
+}
+
+#main a:hover {
+	text-decoration: none;
 }
 
 #main button {
@@ -166,8 +177,34 @@ ul li:hover {
 	border-bottom: none;
 }
 
+#portfolio .workDiv:nth-child(2) {
+	padding-top: 0px;
+}
+
+
 #contact {
 	min-height: calc(100vh - 80px);
+}
+
+input:focus, textarea:focus {
+	outline:none;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  opacity: .3;
+  font-style: italic;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  opacity: .3;
+  font-style: italic;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  opacity: .3;
+  font-style: italic;
+}
+:-moz-placeholder { /* Firefox 18- */
+  opacity: .3;
+  font-style: italic;
 }
 
 
